migrated message tool (for recent chat, discussion, etc), moved the message api and impl to the new message module from announcement
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@8264 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/WEB-INF/web.xml
+++ b/chat-tool/tool/src/webapp/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" 
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-    <display-name>sakai-mailarchive-tool</display-name>
-    <description>sakai-mailarchive-tool</description>
+    <display-name>sakai-chat-tool</display-name>
+    <description>sakai-chat-tool</description>
 
 	<!-- Sakai request filter -->
     <filter>
@@ -18,16 +18,6 @@
         <dispatcher>FORWARD</dispatcher>
         <dispatcher>INCLUDE</dispatcher>
     </filter-mapping>
-
-	<!--
-    <filter-mapping>
-        <filter-name>sakai.request</filter-name>
-        <servlet-name>sakai.synoptic.chat</servlet-name>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-    </filter-mapping>
-	-->
 
 	<!-- the vm handling servlet : used direct by name, not by URL path -->
 	<servlet>
@@ -57,22 +47,6 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
      </servlet>
-
-	<!--
-    <servlet>
-        <servlet-name>
-           sakai.synoptic.chat
-        </servlet-name>
-        <servlet-class>
-            org.sakaiproject.tool.recent.SynopticMessageAction
-        </servlet-class>
-        <init-param>
-            <param-name>template</param-name>
-            <param-value>recent/chef_synoptic_message</param-value>            
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-     </servlet>
-	-->
 
     <listener>
         <listener-class>org.sakaiproject.util.ToolListener</listener-class>
