http://bugs.sakaiproject.org/jira/browse/SAK-3868
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@8981 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -88,3 +88,4 @@ bar.nodatetime = Neither Date or Time
 bar.allmes = All Messages
 bar.view=View
 bar.show=Show
+bar.listnavselect = List options: press alt + up and down arrows to scroll through menu
