http://bugs.sakaiproject.org/jira/browse/SAK-8490
Refactored Chat
Added a second presence update id to the couriertool

git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@21893 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -89,3 +89,27 @@ bar.allmes = All Messages
 bar.view=View
 bar.show=Show
 bar.listnavselect = List options: press alt + up and down arrows to scroll through menu
+
+
+
+
+
+
+
+
+# ###############################
+# all the new strings
+
+default_new_channel_title=Main Channel
+allMessages=All Messages
+timeOnly=Time Only
+timeAndDate=Date and Time
+dateOnly=Date Only
+neitherDateOrTime=Neither Date or Time
+manage_tool=Manage Tool
+lay_note=All chat messages are archived and can be read by any site participant.
+lay_user=Users in Chat
+view=View
+control_post=Add Message
+cancel=Cancel
+permissions_link=Permissions
