http://bugs.sakaiproject.org/jira/browse/SAK-8490 Updating pom for m2 build
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@21902 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-api/api/pom.xml
+++ b/chat-api/api/pom.xml
@@ -55,6 +55,14 @@
       <version>${sakai.version}</version>
       <scope>provided</scope>
     </dependency>
+    
+    <dependency>
+	    <groupId>org.sakaiproject</groupId>
+        <artifactId>sakai-metaobj-api</artifactId>
+        <version>${sakai.version}</version>
+        <scope>provided</scope>
+    </dependency>
+    
   </dependencies>
   <build>
     
