http://bugs.sakaiproject.org/jira/browse/SAK-8490 Updating pom for m2 build
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@21903 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/pom.xml
+++ b/chat-impl/impl/pom.xml
@@ -146,6 +146,18 @@
       <version>${sakai.version}</version>
       <scope>provided</scope>
     </dependency>
+    
+      <dependency>
+  	        <groupId>org.sakaiproject</groupId>
+  	        <artifactId>sakai-metaobj-tool-lib</artifactId>
+  	        <version>${sakai.version}</version>
+      </dependency>
+	  	 
+      <dependency>
+  	        <groupId>org.sakaiproject</groupId>
+  	        <artifactId>sakai-metaobj-api</artifactId>
+ 	        <version>${sakai.version}</version>
+      </dependency>
     <dependency>
       
       <groupId>javax.servlet</groupId>
@@ -160,6 +172,19 @@
       <version>1.0.4</version>
       <scope>provided</scope>
     </dependency>
+    
+    <dependency>
+         <groupId>${sakai.hibernate.groupId}</groupId>
+         <artifactId>${sakai.hibernate.artifactId}</artifactId>
+         <version>${sakai.hibernate.version}</version>
+     </dependency>
+	  	 
+     <dependency>
+         <groupId>${sakai.spring.groupId}</groupId>
+         <artifactId>${sakai.spring.artifactId}</artifactId>
+         <version>${sakai.spring.version}</version>
+     </dependency>
+
   </dependencies>
   <build>
     
