--- a/chat-impl/pack/pom.xml
+++ b/chat-impl/pack/pom.xml
@@ -56,6 +56,37 @@
       <artifactId>sakai-entity-util</artifactId>
       <version>${sakai.version}</version>
     </dependency>
+    
+      <dependency>
+         <groupId>org.sakaiproject</groupId>
+         <artifactId>sakai-util-api</artifactId>
+          <version>${sakai.version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.sakaiproject</groupId>
+          <artifactId>sakai-component</artifactId>
+          <version>${sakai.version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.sakaiproject</groupId>
+          <artifactId>sakai-tool-api</artifactId>
+          <version>${sakai.version}</version>
+      </dependency>
+
+     <dependency>
+       <groupId>org.sakaiproject</groupId>
+       <artifactId>sakai-metaobj-api</artifactId>
+       <version>${sakai.version}</version>
+     </dependency>
+
+     <dependency>
+       <groupId>org.sakaiproject</groupId>
+       <artifactId>sakai-authz-api</artifactId>
+       <version>${sakai.version}</version>
+     </dependency>
+    
   </dependencies>
   <build>
     
