--- a/chat-tool/tool/pom.xml
+++ b/chat-tool/tool/pom.xml
@@ -152,6 +152,128 @@
       <artifactId>sakai-velocity-tool</artifactId>
       <version>${sakai.version}</version>
     </dependency>
+    
+    
+
+
+
+	     <dependency>
+	       <groupId>org.sakaiproject</groupId>
+	       <artifactId>sakai-metaobj-api</artifactId>
+	       <version>${sakai.version}</version>
+	     </dependency>
+	     
+
+
+        <dependency>
+            <groupId>jsf</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>1.1.01</version>
+        <properties>
+            <war.bundle>true</war.bundle>
+        </properties>
+        </dependency>
+    
+        <dependency>
+            <groupId>jsf</groupId>
+            <artifactId>jsf-impl</artifactId>
+            <version>1.1.01</version>
+        <properties>
+            <war.bundle>true</war.bundle>
+        </properties>
+        </dependency>
+        
+        <dependency>
+            <groupId>jspapi</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>servletapi</groupId>
+            <artifactId>servletapi</artifactId>
+            <version>2.4</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-jsf-tool</artifactId>
+            <version>${sakai.version}</version>
+            <properties>
+                <war.bundle>true</war.bundle>
+            </properties>        
+        </dependency>
+
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-jsf-app</artifactId>
+            <version>${sakai.version}</version>
+            <properties>
+                <war.bundle>true</war.bundle>
+            </properties>        
+        </dependency>
+
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-jsf-widgets</artifactId>
+            <version>${sakai.version}</version>
+            <properties>
+                <war.bundle>true</war.bundle>
+            </properties>        
+        </dependency>
+
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-jsf-widgets-sun</artifactId>
+            <version>${sakai.version}</version>
+            <properties>
+                <war.bundle>true</war.bundle>
+            </properties>        
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-digester</groupId>
+            <artifactId>commons-digester</artifactId>
+            <version>1.6</version>
+            <properties>
+                <war.bundle>true</war.bundle>
+            </properties>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.7.0</version>
+            <properties>
+                <war.bundle>true</war.bundle>
+            </properties>        
+        </dependency>
+
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.0.4</version>
+            <properties>
+                <war.bundle>true</war.bundle>
+            </properties>        
+        </dependency>
+
+
+    
+    
+    
 <!-- velocity and dependencies (logkit, oro, collections) -->
     <dependency>
       
