--- a/chat-tool/tool/pom.xml
+++ b/chat-tool/tool/pom.xml
@@ -178,19 +178,19 @@
         </dependency>
         
         <dependency>
-            <groupId>jspapi</groupId>
+            <groupId>javax.servlet</groupId>
             <artifactId>jsp-api</artifactId>
             <version>2.0</version>
         </dependency>
 
         <dependency>
-            <groupId>servletapi</groupId>
-            <artifactId>servletapi</artifactId>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
             <version>2.4</version>
         </dependency>
         
         <dependency>
-            <groupId>jstl</groupId>
+            <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.0.2</version>
         </dependency>
