http://bugs.sakaiproject.org/jira/browse/SAK-8508 http://bugs.sakaiproject.org/jira/browse/SAK-8676 Finally checking in Chat changes.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@22615 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/.classpath
+++ b/chat-tool/.classpath
@@ -22,6 +22,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/presence-util"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/metaobj-api"/>
+	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-api-1.1.01.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
