--- a/chat-impl/.classpath
+++ b/chat-impl/.classpath
@@ -22,9 +22,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/site-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/metaobj-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/metaobj-util"/>
-	<classpathentry kind="var" path="MAVEN_REPO/org.hibernate/jars/hibernate-3.1.3.jar" sourcepath="/HIBERNATE_SRC"/>
 	<classpathentry kind="var" path="MAVEN_REPO/org.springframework/jars/spring-1.2.8.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org.hibernate/jars/hibernate-3.1.3.jar" sourcepath="/HIBERNATE_SRC"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/search-api"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
