--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -12,6 +12,7 @@ messages = Messages
 on = on
 permis = Permissions
 setpermis = Set permissions for Chat room in worksite 
+perm_description=Set permissions for {0} in worksite ''{1}''
 showall = All Messages
 showd = Show Date
 showlast = Show Last
@@ -35,6 +36,7 @@ gen.alert = Alert:
 gen.cancel = Cancel
 gen.date = Date:
 gen.delete = Delete
+gen.edit = Edit
 gen.from = From:
 gen.mess = Message:
 gen.save = Update Options
@@ -100,16 +102,53 @@ bar.listnavselect = List options: press alt + up and down arrows to scroll throu
 # ###############################
 # all the new strings
 
+past_x_days=Past {0} days
+
 default_new_channel_title=Main Channel
 allMessages=All Messages
 timeOnly=Time Only
 timeAndDate=Date and Time
 dateOnly=Date Only
-neitherDateOrTime=Neither Date or Time
-manage_tool=Manage Tool
+neitherDateOrTime=Neither Date nor Time
+manage_tool=Options
 lay_note=All chat messages are archived and can be read by any site participant.
 lay_user=Users in Chat
 view=View
-control_post=Add Message
-cancel=Cancel
-permissions_link=Permissions
+
+add_room=Add Room
+change_room=Change Room
+enter_the_chat_room=Enter ''{0}'' Room
+channel_creation_date=Creation Date
+channel_description=Description
+channel_title=Title
+
+edit_channel_title=Edit Room
+
+message_display=Message Display
+
+perm_error=Insufficient Permissions for {0}
+
+message_owner=Owner
+
+select_room_title=Select Chat Room
+
+tool_options_title=Tool Options
+
+monitor_panel=List
+presence_panel=Presence
+control_panel=Control
+
+delete_room_confirm_title = Deleting chat room
+delete_room_confirm_alert = Are you sure you want to permanently delete this chat room?
+
+#Synoptic pages
+recent_chat_heading=Recent Chat Display
+number_days=Number of days in the past
+number_messages=Number of Chat messages
+number_chars=Number of characters per Chat message
+update_text=Update
+
+title_required=Title is required
+
+set_default=Set as Default
+set_as_default=Set ''{0}'' as Default
