http://bugs.sakaiproject.org/jira/browse/SAK-8508 http://bugs.sakaiproject.org/jira/browse/SAK-8677 http://bugs.sakaiproject.org/jira/browse/SAK-8695 http://bugs.sakaiproject.org/jira/browse/SAK-8679 More work on chat.  Messages should be searchable. Removed most iframes to fix deleting problem.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@22868 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/pom.xml
+++ b/chat-impl/impl/pom.xml
@@ -90,6 +90,19 @@
       <version>${sakai.version}</version>
       <scope>provided</scope>
     </dependency>
+    
+    <dependency>
+           <groupId>org.sakaiproject</groupId>
+           <artifactId>sakai-search-api</artifactId>
+           <version>${sakai.version}</version>
+       </dependency>
+
+		<dependency>
+           <groupId>org.sakaiproject</groupId>
+           <artifactId>sakai-search-impl</artifactId>
+           <version>${sakai.version}</version>
+       </dependency>
+       
     <dependency>
       
       <groupId>org.sakaiproject</groupId>
@@ -189,6 +202,12 @@
           <include>**/*.sql</include>
         </includes>
       </resource>
+      <resource>
+			<directory>${basedir}/src/bundle</directory>
+			<includes>
+				<include>**/*.properties</include>
+			</includes>
+		</resource>
     </resources>
     
   </build>
