--- a/chat-impl/.classpath
+++ b/chat-impl/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/org.springframework/jars/spring-1.2.8.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/org.hibernate/jars/hibernate-3.1.3.jar" sourcepath="/HIBERNATE_SRC"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/search-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/search-impl"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
