http://bugs.sakaiproject.org/jira/browse/SAK-8800 Adding text to indicate what room the user is currently in.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@22999 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -152,3 +152,5 @@ title_required=Title is required
 
 set_default=Set as Default
 set_as_default=Set ''{0}'' as Default
+
+viewingChatRoomText=Currently viewing messages for ''{0}''
