http://bugs.sakaiproject.org/jira/browse/SAK-8852 Blank messages are ignored and not submitted http://bugs.sakaiproject.org/jira/browse/SAK-8828 Fixed the size for the frame.  It was cutting off the last few pixels of the buttons. http://bugs.sakaiproject.org/jira/browse/SAK-8821 Clicking options will now take you to the options for the current room.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@23077 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -123,6 +123,7 @@ channel_description=Description
 channel_title=Title
 
 edit_channel_title=Edit Room
+add_channel_title=Add Room
 
 message_display=Message Display
 
@@ -133,6 +134,8 @@ message_owner=Owner
 select_room_title=Select Chat Room
 
 tool_options_title=Tool Options
+synoptic_options_title=Synoptic Options
+room_list_title=Manage Rooms
 
 monitor_panel=List
 presence_panel=Presence
