http://bugs.sakaiproject.org/jira/browse/SAK-9023 Changed the name of the default chat room.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@27863 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -104,7 +104,7 @@ bar.listnavselect = List options: press alt + up and down arrows to scroll throu
 
 past_x_days=Past {0} days
 
-default_new_channel_title=Main Channel
+default_new_channel_title=Main Chat Room
 allMessages=All Messages
 timeOnly=Time Only
 timeAndDate=Date and Time
