http://bugs.sakaiproject.org/jira/browse/SAK-8678 Fixing up some performance issues and having the task run in a new thread so as not to delay tomcat's startup.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@28853 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/src/bundle/chat-sql.properties
+++ b/chat-impl/impl/src/bundle/chat-sql.properties
@@ -1,24 +1,20 @@
 #mysql strings
-mysql.alter.channel=alter table CHAT2_CHANNEL add column migratedChannelId varchar(99);
-mysql.alter.message=alter table CHAT2_MESSAGE add column migratedMessageId varchar(99);
 mysql.select.oldchannels=select c.channel_id, c.xml from chat_channel c order by c.channel_id
 mysql.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, migratedChannelId) \
 select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, ''{8}'' from dual where not exists \
-(select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'');
-mysql.select.oldmessages=select m.message_id, m.xml, m.owner, m.message_date from chat_message m where m.channel_id \= ''{0}'' order by m.MESSAGE_DATE
+(select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'')
+mysql.select.oldmessages=select m.message_id, m.channel_id, m.xml, m.owner, m.message_date from chat_message m order by m.MESSAGE_DATE
 mysql.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
 select ''{0}'', ''{1}'', ''{2}'', STR_TO_DATE(''{3}'', ''%c/%e/%y %l:%i %p''), ''{4}'', ''{5}'' from dual where not exists \
-(select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'');
+(select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'')
 
 
 #oracle strings
-oracle.alter.channel=alter table CHAT2_CHANNEL add migratedChannelId varchar2(99);
-oracle.alter.message=alter table CHAT2_MESSAGE add migratedMessageId varchar2(99);
 oracle.select.oldchannels=select c.channel_id, c.xml from chat_channel c order by c.channel_id
 oracle.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, migratedChannelId) \
 select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, ''{8}'' from dual where not exists \
-(select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'');
-oracle.select.oldmessages=select m.message_id, m.xml, m.owner, m.message_date from chat_message m where m.channel_id \= ''{0}'' order by m.MESSAGE_DATE
+(select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'')
+oracle.select.oldmessages=select m.message_id, m.channel_id, m.xml, m.owner, m.message_date from chat_message m order by m.MESSAGE_DATE
 oracle.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
 select ''{0}'', ''{1}'', ''{2}'', to_date(''{3}'', ''MM/DD/YY HH:MI PM''), ''{4}'', ''{5}'' from dual where not exists \
-(select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'');
+(select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'')
