http://bugs.sakaiproject.org/jira/browse/SAK-9513 Chat search results now link to the messages properly.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@28955 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-api/api/pom.xml
+++ b/chat-api/api/pom.xml
@@ -30,6 +30,13 @@
     <dependency>
       
       <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-component-api</artifactId>
+      <version>${sakai.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      
+      <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-entity-api</artifactId>
       <version>${sakai.version}</version>
       <scope>provided</scope>
