http://bugs.sakaiproject.org/jira/browse/SAK-9582 Adding a back button that will take you back to the room that you were viewing.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@29301 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -157,3 +157,5 @@ set_default=Set as Default
 set_as_default=Set ''{0}'' as Default
 
 viewingChatRoomText=Currently viewing messages for ''{0}''
+
+back_to_room=Back to room
