--- a/chat-impl/impl/src/bundle/chat-sql.properties
+++ b/chat-impl/impl/src/bundle/chat-sql.properties
@@ -14,7 +14,7 @@ oracle.select.oldchannels=select c.CHANNEL_ID, c.XML from CHAT_CHANNEL c order b
 oracle.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, migratedChannelId) \
 select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, ''{8}'' from dual where not exists \
 (select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'')
-oracle.select.oldmessages=select m.MESSAGE_ID, m.CHANNEL_ID, m.XML, m.OWNER, m.MESSAGE_DATE from CHAT_MESSAGE m order by m.MESSAGE_DATE;
+oracle.select.oldmessages=select m.MESSAGE_ID, m.CHANNEL_ID, m.XML, m.OWNER, m.MESSAGE_DATE from CHAT_MESSAGE m order by m.MESSAGE_DATE
 oracle.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
 select ''{0}'', ''{1}'', ''{2}'', to_date(''{3}'', ''MM/DD/YY HH:MI PM''), ''{4}'', ''{5}'' from dual where not exists \
 (select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'')
