http://bugs.sakaiproject.org/jira/browse/SAK-9759 Making the functionality consistent with the way the options worked before, but still allowing for the "new" functionality of being able to limit the visible messages.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@29798 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/src/bundle/chat-sql.properties
+++ b/chat-impl/impl/src/bundle/chat-sql.properties
@@ -1,7 +1,7 @@
 #mysql strings
 mysql.select.oldchannels=select c.CHANNEL_ID, c.XML from CHAT_CHANNEL c order by c.CHANNEL_ID
-mysql.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, migratedChannelId) \
-select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, ''{8}'' from dual where not exists \
+mysql.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, ENABLE_USER_OVERRIDE, migratedChannelId) \
+select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, {9}, ''{8}'' from dual where not exists \
 (select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'')
 mysql.select.oldmessages=select m.MESSAGE_ID, m.CHANNEL_ID, m.XML, m.OWNER, m.MESSAGE_DATE from CHAT_MESSAGE m order by m.MESSAGE_DATE
 mysql.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
@@ -11,8 +11,8 @@ select ''{0}'', ''{1}'', ''{2}'', STR_TO_DATE(''{3}'', ''%c/%e/%y %l:%i %p''), '
 
 #oracle strings
 oracle.select.oldchannels=select c.CHANNEL_ID, c.XML from CHAT_CHANNEL c order by c.CHANNEL_ID
-oracle.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, migratedChannelId) \
-select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, ''{8}'' from dual where not exists \
+oracle.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, ENABLE_USER_OVERRIDE, migratedChannelId) \
+select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, {9}, ''{8}'' from dual where not exists \
 (select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'')
 oracle.select.oldmessages=select m.MESSAGE_ID, m.CHANNEL_ID, m.XML, m.OWNER, m.MESSAGE_DATE from CHAT_MESSAGE m order by m.MESSAGE_DATE
 oracle.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
