--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -103,6 +103,7 @@ bar.listnavselect = List options: press alt + up and down arrows to scroll throu
 # all the new strings
 
 past_x_days=Past {0} days
+past_x_messages=Past {0} messages
 
 default_new_channel_title=Main Chat Room
 allMessages=All Messages
@@ -112,6 +113,8 @@ dateOnly=Date Only
 neitherDateOrTime=Neither Date nor Time
 manage_tool=Options
 lay_note=All chat messages are archived and can be read by any site participant.
+lay_restricted_note_days=Only messages from the past {0} days are archived and can be read by any site participant.
+lay_restricted_note_messages=Only the past {0} messages are archived and can be read by any site participant.
 lay_user=Users in Chat
 view=View
 
@@ -159,3 +162,5 @@ set_as_default=Set ''{0}'' as Default
 viewingChatRoomText=Currently viewing messages for ''{0}''
 
 back_to_room=Back to room
+
+channel_enable_override_description=Allow site participants to change the chat display settings for their own chat window
