http://bugs.sakaiproject.org/jira/browse/SAK-9647 Added a list of characters to escape from the message body, specifically, ';' and '&'.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@30384 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/src/bundle/chat-sql.properties
+++ b/chat-impl/impl/src/bundle/chat-sql.properties
@@ -8,6 +8,12 @@ mysql.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, M
 select ''{0}'', ''{1}'', ''{2}'', STR_TO_DATE(''{3}'', ''%c/%e/%y %l:%i %p''), ''{4}'', ''{5}'' from dual where not exists \
 (select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'')
 
+# I really only want one '\', but I need to escape it a few times jor java to handle it properly
+mysql.escapeChar=\\\\
+
+mysql.escapedChars.count=2
+mysql.escapedChars.1=&
+mysql.escapedChars.2=;
 
 #oracle strings
 oracle.select.oldchannels=select c.CHANNEL_ID, c.XML from CHAT_CHANNEL c order by c.CHANNEL_ID
@@ -18,3 +24,10 @@ oracle.select.oldmessages=select m.MESSAGE_ID, m.CHANNEL_ID, m.XML, m.OWNER, m.M
 oracle.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
 select ''{0}'', ''{1}'', ''{2}'', to_date(''{3}'', ''MM/DD/YY HH:MI PM''), ''{4}'', ''{5}'' from dual where not exists \
 (select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'')
+
+# I really only want one '\', but I need to escape it a few times jor java to handle it properly
+oracle.escapeChar=\\\\
+
+oracle.escapedChars.count=2
+oracle.escapedChars.1=&
+oracle.escapedChars.2=;
