http://bugs.sakaiproject.org/jira/browse/SAK-10156 Revamping the chat migration to let the sqlservice handle all the hard work of escaping characters and such. Also removing the ability to write out the sql to a file and run it by hand.  It's too hard to deal with escaping characters for the various tools.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@31020 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/src/bundle/chat-sql.properties
+++ b/chat-impl/impl/src/bundle/chat-sql.properties
@@ -1,33 +1,11 @@
-#mysql strings
-mysql.select.oldchannels=select c.CHANNEL_ID, c.XML from CHAT_CHANNEL c order by c.CHANNEL_ID
-mysql.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, ENABLE_USER_OVERRIDE, migratedChannelId) \
-select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, {9}, ''{8}'' from dual where not exists \
-(select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'')
-mysql.select.oldmessages=select m.MESSAGE_ID, m.CHANNEL_ID, m.XML, m.OWNER, m.MESSAGE_DATE from CHAT_MESSAGE m order by m.MESSAGE_DATE
-mysql.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
-select ''{0}'', ''{1}'', ''{2}'', STR_TO_DATE(''{3}'', ''%c/%e/%y %l:%i %p''), ''{4}'', ''{5}'' from dual where not exists \
-(select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'')
+select.oldchannels=select c.CHANNEL_ID, c.XML from CHAT_CHANNEL c order by c.CHANNEL_ID
 
-# I really only want one '\', but I need to escape it a few times jor java to handle it properly
-mysql.escapeChar=\\\\
+insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, ENABLE_USER_OVERRIDE, migratedChannelId) \
+select ?, ?, ?, ?, ?, ?, ?, ?, ?, ? from dual where not exists \
+(select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=?)
 
-mysql.escapedChars.count=2
-mysql.escapedChars.1=&
-mysql.escapedChars.2=;
+select.oldmessages=select m.MESSAGE_ID, m.CHANNEL_ID, m.XML, m.OWNER, m.MESSAGE_DATE from CHAT_MESSAGE m order by m.MESSAGE_DATE
 
-#oracle strings
-oracle.select.oldchannels=select c.CHANNEL_ID, c.XML from CHAT_CHANNEL c order by c.CHANNEL_ID
-oracle.insert.channel=insert into CHAT2_CHANNEL (CHANNEL_ID, CONTEXT, CREATION_DATE, title, description, filterType, filterParam, contextDefaultChannel, ENABLE_USER_OVERRIDE, migratedChannelId) \
-select ''{0}'', ''{1}'', {2}, ''{3}'', ''{4}'', ''{5}'', ''{6}'', {7}, {9}, ''{8}'' from dual where not exists \
-(select * from CHAT2_CHANNEL c2 where c2.migratedChannelId=''{8}'')
-oracle.select.oldmessages=select m.MESSAGE_ID, m.CHANNEL_ID, m.XML, m.OWNER, m.MESSAGE_DATE from CHAT_MESSAGE m order by m.MESSAGE_DATE
-oracle.insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
-select ''{0}'', ''{1}'', ''{2}'', to_date(''{3}'', ''MM/DD/YY HH:MI PM''), ''{4}'', ''{5}'' from dual where not exists \
-(select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=''{5}'')
-
-# I really only want one '\', but I need to escape it a few times jor java to handle it properly
-oracle.escapeChar=\\\\
-
-oracle.escapedChars.count=2
-oracle.escapedChars.1=&
-oracle.escapedChars.2=;
+insert.message=insert into CHAT2_MESSAGE (MESSAGE_ID, CHANNEL_ID, OWNER, MESSAGE_DATE, BODY, migratedMessageId) \
+select ?, ?, ?, ?, ?, ? from dual where not exists \
+(select * from CHAT2_MESSAGE m2 where m2.migratedMessageId=?)
