--- a/chat-impl/.classpath
+++ b/chat-impl/.classpath
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="**/.DS_Store" kind="src" path="impl/src/java"/>
-	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/chat-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/message-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/message-impl"/>
-	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/tool-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/content-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/entity-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/event-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/event-util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/component-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/memory-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/db-util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/db-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/alias-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/site-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
-	<classpathentry kind="var" path="MAVEN_REPO/org.springframework/jars/spring-2.0.6.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/org.hibernate/jars/hibernate-3.1.3.jar" sourcepath="/HIBERNATE_SRC"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/search-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/search-impl"/>
-	<classpathentry kind="output" path="bin"/>
+  <classpathentry excluding="**/.DS_Store" kind="src" path="impl/src/java"/>
+  <classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/chat-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/message-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/message-impl"/>
+  <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/tool-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/content-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/entity-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/event-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/event-util"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/component-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/memory-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/db-util"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/db-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/alias-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/site-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.0.6/spring-2.0.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.1.3/hibernate-3.1.3.jar" sourcepath="/HIBERNATE_SRC"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/search-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/search-impl"/>
+  <classpathentry kind="output" path="bin"/>
 </classpath>
