--- a/chat-tool/tool/pom.xml
+++ b/chat-tool/tool/pom.xml
@@ -159,75 +159,89 @@
       <artifactId>sakai-velocity-tool</artifactId>
       <version>${sakai.version}</version>
     </dependency>
-    <dependency>
-      <groupId>jsf</groupId>
-      <artifactId>jsf-api</artifactId>
-      <version>1.1.01</version>
-    </dependency>
-    <dependency>
-      <groupId>jsf</groupId>
-      <artifactId>jsf-impl</artifactId>
-      <version>1.1.01</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>${sakai.servletapi.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-jsf-tool</artifactId>
-      <version>${sakai.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-jsf-app</artifactId>
-      <version>${sakai.version}</version>
-    </dependency>
-    <!-- this will pull the correct dependency set for a Sun Widget Set -->
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-depend-jsf-widgets-sun</artifactId>
-      <version>${sakai.version}</version>
-      <type>pom</type>
-    </dependency>
-    <!-- tomahawk tags are being used, so we have to pull them seperately -->
-    <dependency>
-        <groupId>org.apache.myfaces.tomahawk</groupId>
-        <artifactId>tomahawk</artifactId>
- 	<version>1.1.6</version>
-	<scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-digester</groupId>
-      <artifactId>commons-digester</artifactId>
-      <version>1.6</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-      <version>3.1</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <version>1.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>taglibs</groupId>
-      <artifactId>standard</artifactId>
-      <version>1.0.4</version>
-    </dependency>
+
+        <dependency>
+            <groupId>jsf</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>1.1.01</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>jsf</groupId>
+            <artifactId>jsf-impl</artifactId>
+            <version>1.1.01</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-jsf-tool</artifactId>
+            <version>${sakai.version}</version>      
+        </dependency>
+
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-jsf-app</artifactId>
+            <version>${sakai.version}</version>       
+        </dependency>
+
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-jsf-widgets</artifactId>
+            <version>${sakai.version}</version>    
+        </dependency>
+
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-jsf-widgets-sun</artifactId>
+            <version>${sakai.version}</version>       
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-digester</groupId>
+            <artifactId>commons-digester</artifactId>
+            <version>1.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.7.0</version>     
+        </dependency>
+
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.0.4</version>     
+        </dependency>
+
+
+    
+    
+    
 <!-- velocity and dependencies (logkit, oro, collections) -->
     <dependency>
       
