--- a/chat-impl/.classpath
+++ b/chat-impl/.classpath
@@ -23,7 +23,7 @@
   <classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
   <classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.0.6/spring-2.0.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.1.3/hibernate-3.1.3.jar" sourcepath="/HIBERNATE_SRC"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.2.5.ga/hibernate-3.2.5.ga.jar"/>
   <classpathentry combineaccessrules="false" kind="src" path="/search-api"/>
   <classpathentry combineaccessrules="false" kind="src" path="/search-impl"/>
   <classpathentry kind="output" path="bin"/>
