--- a/chat-tool/tool/.classpath
+++ b/chat-tool/tool/.classpath
@@ -22,15 +22,15 @@
   <classpathentry kind="var" path="M2_REPO/oro/oro/2.0.8/oro-2.0.8.jar"/>
   <classpathentry kind="src" path="/sakai-chat-api"/>
   <classpathentry kind="src" path="/sakai-chat-impl"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0.2/sakai-component-manager-1.0.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0.7-SNAPSHOT/sakai-component-manager-1.0.7-SNAPSHOT.jar"/>
   <classpathentry kind="src" path="/sakai-courier-api"/>
   <classpathentry kind="src" path="/sakai-courier-util"/>
   <classpathentry kind="src" path="/sakai-jsf-app"/>
   <classpathentry kind="src" path="/sakai-jsf-tool"/>
   <classpathentry kind="src" path="/sakai-jsf-widgets"/>
   <classpathentry kind="src" path="/sakai-jsf-widgets-sun"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.0.2/sakai-kernel-api-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.0.2/sakai-kernel-util-1.0.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-api/1.0.7-SNAPSHOT/sakai-kernel-api-1.0.7-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-kernel-util/1.0.7-SNAPSHOT/sakai-kernel-util-1.0.7-SNAPSHOT.jar"/>
   <classpathentry kind="src" path="/sakai-mergedlist-util"/>
   <classpathentry kind="src" path="/sakai-message-api"/>
   <classpathentry kind="src" path="/sakai-message-impl"/>
