SAK-15556 update out-of-date eclipse metadata files
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@60867 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/.project
+++ b/chat-impl/impl/.project
@@ -2,6 +2,7 @@
   <name>sakai-chat-impl</name>
   <comment/>
   <projects>
+    <project>entitybroker-api</project>
     <project>sakai-chat-api</project>
     <project>sakai-message-api</project>
     <project>sakai-message-impl</project>
