--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
   <artifactId>chat-base</artifactId>
   <packaging>pom</packaging>
   <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/chat/trunk</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/chat/trunk</developerConnection>
-    <url>https://source.sakaiproject.org/svn/chat/trunk</url>
+    <connection>scm:svn:https://source.sakaiproject.org/svn/chat/branches/sakai-2.7.x</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/chat/branches/sakai-2.7.x</developerConnection>
+    <url>https://source.sakaiproject.org/svn/chat/branches/sakai-2.7.x</url>
   </scm>
   <modules>
     <module>chat-api/api</module>
