SAK-11423 Accessibility: Frame titles missing (Chat) (patch from Gonzalo)
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@74660 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -149,7 +149,7 @@ synoptic_options_title=Synoptic Options
 room_list_title=Manage Rooms
 
 monitor_panel=List
-presence_panel=Presence
+presence_panel=List of users present in room
 control_panel=Control
 
 delete_room_confirm_title = Deleting chat room
