SAK-10778 Fix for the chat tool becoming extremely slow when there are a massive number of messages by setting a cap on the messages which are retrieved and showing the total number of messages on screen
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@79381 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -138,6 +138,8 @@ add_channel_title=Add Room
 
 message_display=Message Display
 
+messages_shown_total=Showing {0} messages out of {1}
+
 perm_error=Insufficient Permissions for {0}
 
 message_owner=Owner
