--- a/chat-tool/tool/pom.xml
+++ b/chat-tool/tool/pom.xml
@@ -54,7 +54,7 @@
       <artifactId>sakai-courier-util</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.sakaiproject</groupId>
+      <groupId>org.sakaiproject.site</groupId>
       <artifactId>sakai-mergedlist-util</artifactId>
     </dependency>
     <dependency>
