--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
         <version>${sakai.courier.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.sakaiproject</groupId>
+        <groupId>org.sakaiproject.site</groupId>
         <artifactId>sakai-mergedlist-util</artifactId>
-        <version>2.9-SNAPSHOT</version>
+        <version>${sakai.site.version}</version>
       </dependency>
 <!-- JSF dependencies -->
       <dependency>
