--- a/chat-impl/impl/pom.xml
+++ b/chat-impl/impl/pom.xml
@@ -49,7 +49,7 @@
       <artifactId>sakai-chat-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.sakaiproject</groupId>
+      <groupId>org.sakaiproject.message</groupId>
       <artifactId>sakai-message-api</artifactId>
     </dependency>
     <dependency>
@@ -61,7 +61,7 @@
       <artifactId>entitybroker-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.sakaiproject</groupId>
+      <groupId>org.sakaiproject.message</groupId>
       <artifactId>sakai-message-impl</artifactId>
     </dependency>
     <dependency>
