SAK-21577 removing hardcoded references to 2.10-SNAPSHOT from pom files that should be variables instead. Think this will allow trunk to build again.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@101920 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
       <dependency>
         <groupId>org.sakaiproject.message</groupId>
         <artifactId>sakai-message-impl</artifactId>
-        <version>2.10-SNAPSHOT</version>
+        <version>${sakai.message.version}</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
