--- a/chat-tool/tool/pom.xml
+++ b/chat-tool/tool/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>chat-base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.9-SNAPSHOT</version>
+    <version>2.9.0-b01</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <name>sakai-chat-tool</name>
@@ -36,6 +36,7 @@
     <dependency>
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-chat-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.courier</groupId>
