SAK-22191 - Add UI to view all chat messages
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@108269 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -38,6 +38,7 @@ gen.cancel = Cancel
 gen.date = Date:
 gen.delete = Delete
 gen.edit = Edit
+gen.view = View Log
 gen.from = From:
 gen.mess = Message:
 gen.save = Update Options
