--- a/chat-impl/impl/pom.xml
+++ b/chat-impl/impl/pom.xml
@@ -30,7 +30,7 @@
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
+      <artifactId>hibernate</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -75,6 +75,7 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
+      <version>1.0.4</version>
     </dependency>
   </dependencies>
   <build>
