SAK-22888 - Fix chat hardcoded version
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@116121 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-chat-impl</artifactId>
-        <version>2.10-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject.presence</groupId>
