--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,12 @@
       <dependency>
         <groupId>org.sakaiproject.message</groupId>
         <artifactId>sakai-message-impl</artifactId>
-        <version>2.9-SNAPSHOT</version>
+        <version>${sakai.message.version}</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-chat-impl</artifactId>
-        <version>2.9-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject.presence</groupId>
