--- a/chat-api/api/pom.xml
+++ b/chat-api/api/pom.xml
@@ -7,6 +7,7 @@
     <version>2.9-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
+  <version>${sakai.version}</version>
   <name>sakai-chat-api</name>
   <groupId>org.sakaiproject</groupId>
   <artifactId>sakai-chat-api</artifactId>
