SAK-22889 - Remove chat-api from master
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@116124 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+       <groupId>org.sakaiproject</groupId>
+        <artifactId>sakai-chat-api</artifactId>
+        <version>${project.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
         <groupId>org.sakaiproject.message</groupId>
         <artifactId>sakai-message-impl</artifactId>
         <version>${sakai.message.version}</version>
